# QMultiFile

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  QMultiFile.pro  Readme.md
cmake/: FindQuaZip.cmake
qmultifile/: CMakeLists.txt  QFileFactory.cpp  QFileFactory.h  QFileType.cpp  QFileType.h  QMultiFile.cpp  QMultiFile.h  QMultiFileConfig.h  QMultiFileInfo.cpp  QMultiFileInfo.h  qmultifile.pri  qmultifile.pro
qmultifile/fileTypes/: QPlainFileType.cpp  QPlainFileType.h  QTarFileType.cpp  QTarFileType.h  QTarGzFileType.cpp  QTarGzFileType.h  QZipFileType.cpp  QZipFileType.h  fileTypes.pri
qmultifile/util/: QTar.cpp  QTar.h  QTarFile.cpp  QTarFile.h  util.pri
testFiles/: test.tar
testFiles/dir1/: ps.txt
testFiles/dir2/: df.txt
testFiles/dir3/: free.txt
test_app/: CMakeLists.txt  test_app.pri  test_app.pro  test_main.cpp
